<resources>
    <string name="app_name">Indoor Localization Tieto</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ok_but">Ok</string>
    <string name="cancel_but">Cancel</string>
    <string name="navi_settings">Ustawienia nawigacji</string>
    <string name="pref_shortest_path">Najkrótsza droga</string>
    <string name="pref_avoid_rooms">Unikaj nawigacji przez pokoje</string>
    <string name="pref_avoid_elevators">Unikaj wind</string>
    <string name="pref_avoid_stairs">Unikaj schodów</string>
    <string name="preferences_file">PreferencesFile</string>
</resources>
