<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:title="@string/navi_settings"
        android:key="pref_key_navi_settings">
        <CheckBoxPreference
            android:key="pref_shortest_path"
            android:title="@string/pref_shortest_path"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="pref_avoid_rooms"
            android:title="@string/pref_avoid_rooms"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="pref_avoid_elevators"
            android:title="@string/pref_avoid_elevators"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="pref_avoid_stairs"
            android:title="@string/pref_avoid_stairs"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>